--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@ body {
 	color: deeppink;
 }
 
-image {
-	margin: 40px 0px 0px 0px;
-      border: 0px solid white;
-      border-radius: 40px;
+img {
+	display: block;
+	border-radius: 50px;
+      
 }
 
 h1 {
@@ -17,4 +17,5 @@ h1 {
       padding: 10px;
       background: rgba(255,20,147);
       font-weight: bold
+
     }
