--- a/style.css
+++ b/style.css
@@ -4,18 +4,38 @@ body {
 }
 
 img {
-	display: block;
+	display: inline-block;
 	border-radius: 50px;
-      
+   margin: 0 40%;
+   width: 10%;
+   height: ;
 }
+
 
 h1 {
 	text-align: center;
 }
 
  ul {
+ 	list-style-type: none;
       padding: 10px;
-      background: rgba(255,20,147);
-      font-weight: bold
+      background: deeppink;
+      font-weight: bold;
 
+    }
+
+    .links {
+    	text-align: center;
+    	
+
+    }
+
+
+    li {
+    	display: inline;
+
+    }
+
+    a {
+    	color: lemonchiffon;
     }
